# mcom03-sbl

./: .clang-format  .codespell.ignore  .pre-commit-config.yaml  .zuul.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.rst  bitops.h  docker-run.sh  link.ld  link.ld.S  link.ld.in  pll.h  regs.h  ruff.toml  sbl-cpu.c  sbl.c  start-aarch64.S  start-mips.S  start.S  ucg.c  ucg.h
cmake/: MipsCSPConfig.cmake  helpers.cmake
common/: CMakeLists.txt  asm.h  common.c  common.h
drivers/: CMakeLists.txt  mcom03-regs.h
drivers/cpu/: cpu.c  cpu.h
drivers/ddr/: ddr.h
drivers/factory-reset/: factory-reset.c  factory-reset.h
drivers/gpio/: gpio.c  gpio.h
drivers/hs-periph/: hs-periph.c  hs-periph.h
drivers/iommu/: iommu.c  iommu.h
drivers/irq/: exception-handler.c  exception.S  irq.c  irq.h  qlic.h  vectors.S
drivers/ls-periph0/: ls-periph0.c  ls-periph0.h
drivers/ls-periph1/: ls-periph1.c  ls-periph1.h
drivers/mailbox/: mailbox.c  mailbox.h
drivers/mips-cp0/: mips-cp0.c  mips-cp0.h
drivers/mips-cp0/asm/: mips-cp0.h
drivers/otp/: otp.c  otp.h
drivers/pll/: pll.c  pll.h
drivers/qlic/: irq.c  irq.h  qlic.c  qlic.h
drivers/qspi/: qspi.c  qspi.h
drivers/service/: service.c  service.h
drivers/spi-nor/: spi-nor.c  spi-nor.h
drivers/timer/: timer.c  timer.h
drivers/top/: top.c  top.h
drivers/uart/: uart-config.c  uart-config.h  uart.c  uart.h
drivers/ucg/: ucg.c  ucg.h
drivers/wdt/: wdt-config.c  wdt-config.h  wdt.c  wdt.h
fitimg/: CMakeLists.txt  mcom03-fit-gen.template
libs/: CMakeLists.txt  asm.h  errors.h  log.h  mc.h  mmio.h  platform-def-common.h  utils-def.h
libs/bootstage/: bootstage.c  bootstage.h
libs/console/: console.c  console.h
libs/env/: env-io-ram.c  env-io-ram.h  env-io-spi.c  env-io-spi.h  env-io.c  env-io.h  env.c  env.h
libs/fdt-helpers/: fdt-helpers.c  fdt-helpers.h
libs/helpers/: helpers.c  helpers.h
libs/platform/: abort.c  assert.c  assert.h  format-parser.c  format-parser.h  printf.c  putchar.c  sbrk.c  snprintf.c  stack-protector.c
libs/queue/: queue.c  queue.h
libs/sbimage/: sbexecutor.c  sbexecutor.h  sbimage.h  sbstatus-print.h  status.h
playbooks/: sbl-unittests.yaml
sbl-s1/: CMakeLists.txt  hwinit.c  link.ld.S  platform-def.h  startup.S
sbl-s1/drivers/: gpio.c  gpio.h  hs-periph-urb.h  ls-periph1-urb.h  pll.c  pll.h  service-urb.c  service-urb.h  uart.c  uart.h  ucg.c  ucg.h  wdt.c  wdt.h
sbl-s1/include/: asm.h  mcom03-errors.h  mcom03.h  mmio.h  utils-def-exp.h  utils-def.h
sbl-s1/source/: hwinit.c  startup.S
sbl-s2/: CMakeLists.txt  link.ld.S  main.c  platform-def.h  startup.S  vectors.S
sbl-s3/: CMakeLists.txt  exception-handler.c  exception.S  link.ld.S  main.c  platform-def.h  startup.S  vectors.S
sbl-s3/risc0-ipc/server/: api.c  api.h  ipc-bootstage.c  ipc-ddr-subs.c  ipc-init.c  ipc-otp.c  ipc-pm.c  ipc-wdt.c  ipc.h  protocol.h
sbl-xip/: CMakeLists.txt  bitops.h  link.ld.S  platform-def.h  pll.c  printf.c  printf.h  regs.h  sbl.c  startup.S
scripts/: CMakeLists.txt  helpers.py  mcom03-boot-s3.mdb  mcom03-boot-tl.mdb  mcom03-boot.mdb
scripts/set-secure-regions/: CMakeLists.txt  link.ld.S  main.c  startup.S
tests/: CMakeLists.txt  unittest-env.cc
tl-sbimg/: CMakeLists.txt  bootrom-enc.cfg.in  bootrom-none.cfg.in  bootrom-sign.cfg.in  get-sha256-tbs.sh  package.template.recovery.toml  package.template.toml  sbl-enc.cfg.in  sbl-none.cfg.in  sbl-sign.cfg.in
tl-sbimg/contrib/: gencert.sh
